--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Cooking App</title>
+    <style>
+      /* Disable zoom shortcuts on desktop */
+      body {
+        touch-action: none;
+      }
+    </style>
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
