--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Cooking App</title>
-    <style>
-      /* Disable zoom shortcuts on desktop */
-      body {
-        touch-action: none;
-      }
-    </style>
+    <link rel="icon" type="image/jpg" href="/logo.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+
+    <title>eGovern Archive</title>
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
